# revue

./: .commitlintrc.js  .commitlintrc.json  .gitattributes  .gitignore  .release-please-manifest.json  .typos.toml  CANVAS_TEST_COVERAGE_REPORT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  REFACTORING_REPORT.md  SECURITY.md  SECURITY_AUDIT_REPORT.md  SECURITY_PERFORMANCE_REPORT.md  STABILITY.md  TEST_EXTRACTION_SUMMARY.md  TODO_NEW_ISSUES.md  TODO_SECURITY_PERFORMANCE.md  TO_REVIEW_PRIVATE.md  badge  build.rs  cliff.toml  codecov.yml  delete_old_path.sh  deny.toml  fix_tests.sh  lefthook.yml  libaistream.rlib  release-please-config.json  spinner  tabs  test_path  test_selection  test_selection.rs  tree_mod  types  virtuallist_core
.cargo/: audit.toml  config.toml
.claude/commands/: api-design.md  fix.md  git-workflow.md  gof.md  implement.md  kent-beck.md  linus-torvalds.md  martin-fowler.md  next-test.md  review.md  rust-review.md  security.md  staff-engineer.md  tdd.md  tui-ux.md  uncle-bob.md
.claude/plans/: terminal-image-extension.md
.claude/review-systems/: google.md
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  docs.rs  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: _test-reusable.yml  benchmark.yml  cd.yml  ci.yml  community.yml  docs.yml  framework-check.yml  lint.yml  maintenance.yml  publish-manual.yml  publish.yml  release-please.yml  release.yml  security.yml  test-linux.yml  test-macos.yml  test-windows.yml
benches/: css.rs  dom.rs  layout.rs  patterns.rs  reactive_updates.rs  render.rs  utils.rs  widget.rs
docs/: ARCHITECTURE.md  EXPERT_REVIEW.md  FEATURES.md  FRAMEWORK_COMPARISON.md  GITHUB_SETUP.md  ROADMAP.md  TECH_STACK.md  index.md
docs/guides/: accessibility.md  animations.md  app-builder.md  cli.md  constructor-patterns.md  drag-drop.md  error-handling.md  feature-flags.md  performance.md  plugins.md  query.md  routing.md  state.md  store.md  styling.md  testing.md
docs/migration/: v0.8.0.md
docs/tutorials/: 01-getting-started.md  02-counter.md  03-todo.md  04-reactive.md  05-styling.md  06-forms.md  README.md
examples/: README.md  alert.rs  animations.rs  benchmark_rendering.rs  callout.rs  card.rs  chat.rs  counter.rs  css_features.rs  dashboard.rs  data_explorer.rs  datetime_picker.rs  demo.rs  drag_drop.rs  form_validation.rs  gallery.rs  hello_world.rs  ide.rs  new_widgets.rs  plugins.rs  qrcode_generator.rs  qrcode_showcase.rs  reactive_counter.rs  reactive_form.rs  reactive_todo.rs  showcase.rs  slideshow.rs  status_indicator.rs  store.rs  tasks_usage.rs  test_helper_functions.rs  text_editor.rs  textual_dashboard.rs  theme_switcher.rs  todo.rs  version.rs  widget_showcase.rs  worker_basic.rs  worker_progress.rs
examples/showcase/: example.rs  footer.rs  header.rs  main.rs  tab.rs  theme.rs
extensions/vscode/: language-configuration.json
extensions/zed/: extension.toml
playground/: Cargo.toml
playground/public/: index.html
playground/src/: lib.rs
revue-cli/: Cargo.toml
revue-cli/src/: commands.rs  lib.rs  main.rs  templates.rs
revue-cli/tests/: commands_test.rs  templates_test.rs
revue-macros/: Cargo.toml
revue-macros/src/: lib.rs
scripts/: check-framework-versions.sh  publish-manual.sh
src/: constants.rs  lib.rs
src/a11y/: backend.rs  mod.rs  testing.rs  tree.rs
src/app/: builder.rs  hot_reload.rs  inspector.rs  mod.rs  profiler.rs  router.rs  screen.rs  snapshot.rs
src/core/: constants.rs  mod.rs
src/devtools/: events.rs  helpers.rs  inspector.rs  mod.rs  profiler.rs  state.rs  style.rs  time_travel.rs
src/dom/: cascade.rs  mod.rs  node.rs  pool.rs  query.rs  renderer.rs  selector.rs
src/event/: click.rs  custom.rs  drag.rs  focus.rs  gesture.rs  handler.rs  ime.rs  keymap.rs  mod.rs  reader.rs
src/layout/: block.rs  compute.rs  convert.rs  engine.rs  flex.rs  grid.rs  mod.rs  node.rs  position.rs  responsive.rs  tree.rs
src/patterns/: async_ops.rs  colors.rs  config.rs  confirm.rs  form.rs  keys.rs  lazy.rs  message.rs  mod.rs  navigation.rs  search.rs
src/plugin/: builtin.rs  context.rs  mod.rs  registry.rs  traits.rs
src/query/: mod.rs  parser.rs
src/reactive/: async_state.rs  batch.rs  computed.rs  context.rs  effect.rs  incremental.rs  mod.rs  runtime.rs  signal.rs  signal_vec.rs  store.rs  tracker.rs
src/render/: batch.rs  buffer.rs  cell.rs  diff.rs  image_protocol.rs  mod.rs  terminal.rs
src/runtime/: mod.rs
src/state/: mod.rs
src/style/: animation.rs  computed.rs  error.rs  mod.rs  parser.rs  properties.rs  theme.rs  theme_signal.rs  transition.rs
src/tasks/: event_bus.rs  mod.rs  pooled_runner.rs  runner.rs  timer.rs
src/testing/: actions.rs  assertions.rs  ci.rs  mock.rs  mod.rs  pilot.rs  snapshot.rs  test_app.rs  visual.rs
src/text/: bidi.rs  mod.rs  width.rs  wrap.rs
src/utils/: accessibility.rs  accessibility_signal.rs  animation.rs  ansi.rs  border.rs  browser.rs  clipboard.rs  color.rs  debounce.rs  diff.rs  easing.rs  figlet.rs  filter.rs  format.rs  fuzzy.rs  (+24 more)
templates/: README.md
test-artifacts/: visual-test-report.md
tests/: a11y.rs  a11y_aria_tests.rs  a11y_backend_core_tests.rs  a11y_backend_global_tests.rs  a11y_backend_types_tests.rs  a11y_manager_tests.rs  a11y_mod_tests.rs  a11y_node_tests.rs  a11y_public_api_tests.rs  a11y_roles_tests.rs  a11y_state_tests.rs  a11y_tests.rs  accessibility_announcement_tests.rs  alert_tests.rs  ansi_tests.rs  autocomplete_unicode_tests.rs  boundary.rs  boundary_tests.rs  browser_tests.rs  buffer_tests.rs  canvas.rs  canvas_tests.rs  chart.rs  clipboard_tests.rs  code_editor.rs  code_editor_tests.rs  color_tests.rs  combobox_safety_tests.rs  core_constants_tests.rs  data_viewer.rs  data_viewer_tests.rs  datagrid_filter_tests.rs  debounce_tests.rs  developer_widget_tests.rs  diff_tests.rs  e2e_scenarios.rs  event.rs  event_tests.rs  filter_tests.rs  format_tests.rs  (+98 more)
tools/theme-builder/: Cargo.toml
tools/theme-builder/src/: main.rs
tree-sitter-revue-css/: README.md  grammar.js
(+2523 files in other folders)
