[package]
name = "revue"
version = "1.0.8"
edition = "2021"
rust-version = "1.87"
description = "A Vue-style TUI framework for Rust with CSS styling"
license = "MIT"
repository = "https://github.com/user/revue"
keywords = ["tui", "terminal", "css", "reactive", "ui"]
categories = ["command-line-interface", "gui"]
exclude = [
    "revue-cli/",
    "references/",
    "playground/",
    "extensions/",
    "tools/",
    "docs/",
    "tree-sitter-revue-css/",
    ".claude/",
    ".github/",
    "tests/snapshots/",
    "*.md",
    "cliff.toml",
    "deny.toml",
    "lefthook.yml",
]

[dependencies]
# ═══════════════════════════════════════════
# Terminal
# ═══════════════════════════════════════════
crossterm = "0.29"

# ═══════════════════════════════════════════
# CSS & Layout
# ═══════════════════════════════════════════
cssparser = "0.34"
selectors = "0.25"
taffy = "0.9"

# ═══════════════════════════════════════════
# Text & Unicode
# ═══════════════════════════════════════════
unicode-width = "0.2"
unicode-segmentation = "1.10"
unic-emoji-char = "0.9"
textwrap = "0.16"

# ═══════════════════════════════════════════
# Markdown & Syntax (optional)
# ═══════════════════════════════════════════
pulldown-cmark = { version = "0.12", optional = true }
syntect = { version = "5.2", optional = true }

# ═══════════════════════════════════════════
# Image (Kitty Protocol, optional)
# ═══════════════════════════════════════════
image = { version = "0.25", optional = true }
base64 = "0.22"

# ═══════════════════════════════════════════
# Serialization & Config
# ═══════════════════════════════════════════
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# ═══════════════════════════════════════════
# Utilities
# ═══════════════════════════════════════════
bitflags = "2.6"
arboard = { version = "3.4", optional = true }
fuzzy-matcher = "0.3"
notify = { version = "6.1", optional = true }
tracing = "0.1"
tracing-subscriber = "0.3"
dirs = "6.0"

# ═══════════════════════════════════════════
# QR Code & HTTP & System (optional)
# ═══════════════════════════════════════════
qrcode = { version = "0.14", optional = true }
sysinfo = { version = "0.31", optional = true }
reqwest = { version = "0.13", features = ["json", "blocking"], optional = true }
similar = { version = "2.6", optional = true }

# ═══════════════════════════════════════════
# Error Handling
# ═══════════════════════════════════════════
thiserror = "1.0"
anyhow = "1.0"

[dev-dependencies]
insta = "1.34"
tokio-test = "0.4"
pretty_assertions = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
tempfile = "3.10"

[[bench]]
name = "render"
harness = false

[[bench]]
name = "layout"
harness = false

[[bench]]
name = "css"
harness = false

[[bench]]
name = "dom"
harness = false

[features]
default = ["full"]
# All features enabled (current behavior)
full = [
    "devtools",
    "async",
    "markdown",
    "syntax-highlighting",
    "image",
    "qrcode",
    "sysinfo",
    "diff",
    "clipboard",
    "hot-reload",
]
devtools = []
async = []

# Heavy optional features
markdown = ["dep:pulldown-cmark"]
syntax-highlighting = ["dep:syntect"]
image = ["dep:image"]
qrcode = ["dep:qrcode"]
sysinfo = ["dep:sysinfo"]
diff = ["dep:similar"]
clipboard = ["dep:arboard"]
hot-reload = ["dep:notify"]
http = ["dep:reqwest"]

# Examples with required features
[[example]]
name = "slideshow"
required-features = ["markdown"]

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "macros", "time", "sync"]
