[package]
name = "revue-macros"
version = "2.44.3"
edition = "2021"
rust-version = "1.87"
description = "Internal proc-macros for revue framework"
license = "MIT"
repository = "https://github.com/hawk90/revue"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
