[package]
name = "revue-theme-builder"
version = "0.1.0"
edition = "2021"
description = "Interactive theme builder for Revue TUI framework"

[[bin]]
name = "theme-builder"
path = "src/main.rs"

[dependencies]
revue = { path = "../.." }
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
